--- a/src/Styles/plans.scss
+++ b/src/Styles/plans.scss
@@ -10,6 +10,14 @@
         justify-content: space-around;
         margin-top: 50px;
 
+        @media (max-width: 768px) {
+            display: block;
+        }
+
+        .button {
+            margin-top: 24px;
+        }
+        
         &__item {
             text-align: center;
             padding: 60px 44px 44px;
@@ -17,20 +25,21 @@
             width: 100%;
 
             &:nth-child(2) {
-                background-image: url(../Images/Logos/FundoCombo.png);
+                background-image: url(../images/fundo_combo_plus.png); 
                 background-repeat: no-repeat;
                 background-size: contain;
             }
-            
+
             img {
                 height: 83px;
             }
-            
+
             strong {
                 display: block;
                 margin-top: 24px;
             }
         }
+
     }
 
     p {
